After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768451 - Problem with loading the RTL icons with adwaita
Problem with loading the RTL icons with adwaita
Status: RESOLVED FIXED
Product: goobox
Classification: Other
Component: player
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Goobox Maintainers
Goobox Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-05 15:07 UTC by Laurent Bigonville
Modified: 2018-08-27 08:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Let's GTK+ automatically load rtl icon variants (7.65 KB, patch)
2016-07-05 15:26 UTC, Laurent Bigonville
none Details | Review

Description Laurent Bigonville 2016-07-05 15:07:08 UTC
Hi,

With adwaita (the default GTK3 icon theme), the RTL icons have been renamed from *-rtl-symbolic to *-symbolic-rtl.

According to mclasen, gtk should already load the rtl icons for you.

I tried and indeed, loading "media-playback-start-symbolic" with a RTL locale has the expected behaviour (arrow pointing left)

I /think/ that all this RTL code could be removed
Comment 1 Laurent Bigonville 2016-07-05 15:26:43 UTC
Created attachment 330910 [details] [review]
Let's GTK+ automatically load rtl icon variants

Since GTK 3.13.2, it will automatically load the RTL variant of the
icons when needed.
Comment 2 Paolo Bacchilega 2018-08-27 08:29:21 UTC
Pushed to master, thank you.