Let's GTK+ automatically load rtl icon variants

Since GTK 3.13.2, it will automatically load the RTL variant of the
icons when needed.

https://bugzilla.gnome.org/show_bug.cgi?id=768451